euphony-sc-core/src/snapshots/euphony_sc_core__osc__buffer__alloc_read_channel_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/b_allocReadChannel",
            args: [
                Int(
                    1,
                ),
                String(
                    "path/to/buffer",
                ),
                Int(
                    123,
                ),
                Int(
                    456,
                ),
                Int(
                    1,
                ),
                Int(
                    2,
                ),
                Int(
                    3,
                ),
                Int(
                    4,
                ),
                Int(
                    5,
                ),
            ],
        },
    ),
)
