euphony-sc-core/src/snapshots/euphony_sc_core__osc__buffer__alloc_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/b_alloc",
            args: [
                Int(
                    1,
                ),
                Int(
                    123,
                ),
                Int(
                    456,
                ),
            ],
        },
    ),
)
